--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,28 +14,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-02 Wed 17:59]
+#+CAPTION: Clock summary at [2016-11-02 Wed 20:54]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *37:02* |       |      | 100.0 |
+| *Total time*                                                                | *37:21* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 37:02   |       |      | 100.0 |
-| Active                                                                      |         | 37:02 |      | 100.0 |
+| Stories                                                                     | 37:21   |       |      | 100.0 |
+| Active                                                                      |         | 37:21 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   3.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   1.0 |
-| COMPLETED Improve bintray support                                           |         |       | 2:26 |   6.6 |
+| COMPLETED Improve bintray support                                           |         |       | 2:26 |   6.5 |
 | COMPLETED Add logo with white background                                    |         |       | 0:14 |   0.6 |
 | COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   1.7 |
 | COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   1.7 |
-| COMPLETED Implement wale                                                    |         |       | 7:00 |  18.9 |
-| COMPLETED Add artefact source properties support                            |         |       | 3:11 |   8.6 |
+| COMPLETED Implement wale                                                    |         |       | 7:00 |  18.7 |
+| COMPLETED Add artefact source properties support                            |         |       | 3:11 |   8.5 |
 | COMPLETED Stitch not writing when template has changed                      |         |       | 0:33 |   1.5 |
-| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   7.2 |
-| COMPLETED Implement formatter headers using wale                            |         |       | 0:30 |   1.4 |
-| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |  10.3 |
-| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  25.8 |
-| STARTED Implement formatter helpers implementation using stitch and wale    |         |       | 4:15 |  11.5 |
+| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   7.1 |
+| COMPLETED Implement formatter headers using wale                            |         |       | 0:30 |   1.3 |
+| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |  10.2 |
+| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  25.6 |
+| STARTED Implement formatter helpers implementation using stitch and wale    |         |       | 4:34 |  12.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -364,6 +364,7 @@ Notes:
 : #DOGEN quilt.cpp.types.class_implementation.formatting_style=stitch_wale
 
 *** STARTED Implement formatter helpers implementation using stitch and wale :story:
+    CLOCK: [2016-11-02 Wed 20:35]--[2016-11-02 Wed 20:54] =>  0:19
     CLOCK: [2016-11-02 Wed 17:23]--[2016-11-02 Wed 17:59] =>  0:36
     CLOCK: [2016-11-02 Wed 16:21]--[2016-11-02 Wed 17:22] =>  1:01
     CLOCK: [2016-11-02 Wed 14:07]--[2016-11-02 Wed 14:55] =>  0:48
