--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-02 Wed 21:10]
+#+CAPTION: Clock summary at [2016-11-02 Wed 21:12]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *37:34* |       |      | 100.0 |
+| *Total time*                                                                | *37:36* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 37:34   |       |      | 100.0 |
-| Active                                                                      |         | 37:34 |      | 100.0 |
+| Stories                                                                     | 37:36   |       |      | 100.0 |
+| Active                                                                      |         | 37:36 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   3.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   1.0 |
 | COMPLETED Improve bintray support                                           |         |       | 2:26 |   6.5 |
@@ -34,8 +34,8 @@
 | COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   7.1 |
 | COMPLETED Implement formatter headers using wale                            |         |       | 0:30 |   1.3 |
 | COMPLETED Add profile support to stitch                                     |         |       | 3:48 |  10.1 |
-| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  25.5 |
-| STARTED Implement formatter helpers implementation using stitch and wale    |         |       | 4:47 |  12.7 |
+| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  25.4 |
+| STARTED Implement formatter helpers implementation using stitch and wale    |         |       | 4:49 |  12.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -364,6 +364,7 @@ Notes:
 : #DOGEN quilt.cpp.types.class_implementation.formatting_style=stitch_wale
 
 *** STARTED Implement formatter helpers implementation using stitch and wale :story:
+    CLOCK: [2016-11-02 Wed 21:10]--[2016-11-02 Wed 21:12] =>  0:02
     CLOCK: [2016-11-02 Wed 21:01]--[2016-11-02 Wed 21:09] =>  0:08
     CLOCK: [2016-11-02 Wed 20:55]--[2016-11-02 Wed 21:00] =>  0:05
     CLOCK: [2016-11-02 Wed 20:35]--[2016-11-02 Wed 20:54] =>  0:19
