--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,29 +14,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-03 Thu 00:14]
+#+CAPTION: Clock summary at [2016-11-03 Thu 00:45]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *40:32* |       |      | 100.0 |
+| *Total time*                                                                | *41:01* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 40:32   |       |      | 100.0 |
-| Active                                                                      |         | 40:32 |      | 100.0 |
+| Stories                                                                     | 41:01   |       |      | 100.0 |
+| Active                                                                      |         | 41:01 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   3.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   0.9 |
-| COMPLETED Improve bintray support                                           |         |       | 2:26 |   6.0 |
+| COMPLETED Improve bintray support                                           |         |       | 2:26 |   5.9 |
 | COMPLETED Add logo with white background                                    |         |       | 0:14 |   0.6 |
-| COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   1.6 |
+| COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   1.5 |
 | COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   1.5 |
-| COMPLETED Implement wale                                                    |         |       | 7:00 |  17.3 |
-| COMPLETED Add artefact source properties support                            |         |       | 3:11 |   7.9 |
-| COMPLETED Stitch not writing when template has changed                      |         |       | 0:33 |   1.4 |
-| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   6.6 |
+| COMPLETED Implement wale                                                    |         |       | 7:00 |  17.1 |
+| COMPLETED Add artefact source properties support                            |         |       | 3:11 |   7.8 |
+| COMPLETED Stitch not writing when template has changed                      |         |       | 0:33 |   1.3 |
+| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   6.5 |
 | COMPLETED Implement formatter headers using wale                            |         |       | 0:30 |   1.2 |
-| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |   9.4 |
-| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  23.6 |
-| COMPLETED Implement formatter helpers implementation using stitch and wale  |         |       | 5:00 |  12.3 |
-| STARTED Merge stitch templates with formatters                              |         |       | 2:45 |   6.8 |
+| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |   9.3 |
+| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  23.3 |
+| COMPLETED Implement formatter helpers implementation using stitch and wale  |         |       | 5:00 |  12.2 |
+| COMPLETED Merge stitch templates with formatters                            |         |       | 3:14 |   7.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -385,6 +385,8 @@ templates one by one to use stitch and wale
 
 *** COMPLETED Merge stitch templates with formatters                  :story:
     CLOSED: [2016-11-03 Thu 00:14]
+    CLOCK: [2016-11-03 Thu 00:24]--[2016-11-03 Thu 00:45] =>  0:21
+    CLOCK: [2016-11-03 Thu 00:15]--[2016-11-03 Thu 00:23] =>  0:08
     CLOCK: [2016-11-03 Thu 00:00]--[2016-11-03 Thu 00:14] =>  0:14
     CLOCK: [2016-11-02 Wed 23:29]--[2016-11-02 Wed 23:59] =>  0:30
     CLOCK: [2016-11-02 Wed 23:08]--[2016-11-02 Wed 23:29] =>  0:21
