--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,29 +14,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-03 Thu 00:45]
+#+CAPTION: Clock summary at [2016-11-03 Thu 09:22]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *41:01* |       |      | 100.0 |
+| *Total time*                                                                | *41:13* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 41:01   |       |      | 100.0 |
-| Active                                                                      |         | 41:01 |      | 100.0 |
+| Stories                                                                     | 41:13   |       |      | 100.0 |
+| Active                                                                      |         | 41:13 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   3.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   0.9 |
 | COMPLETED Improve bintray support                                           |         |       | 2:26 |   5.9 |
 | COMPLETED Add logo with white background                                    |         |       | 0:14 |   0.6 |
 | COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   1.5 |
 | COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   1.5 |
-| COMPLETED Implement wale                                                    |         |       | 7:00 |  17.1 |
-| COMPLETED Add artefact source properties support                            |         |       | 3:11 |   7.8 |
+| COMPLETED Implement wale                                                    |         |       | 7:00 |  17.0 |
+| COMPLETED Add artefact source properties support                            |         |       | 3:11 |   7.7 |
 | COMPLETED Stitch not writing when template has changed                      |         |       | 0:33 |   1.3 |
 | COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   6.5 |
 | COMPLETED Implement formatter headers using wale                            |         |       | 0:30 |   1.2 |
-| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |   9.3 |
-| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  23.3 |
-| COMPLETED Implement formatter helpers implementation using stitch and wale  |         |       | 5:00 |  12.2 |
-| COMPLETED Merge stitch templates with formatters                            |         |       | 3:14 |   7.9 |
+| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |   9.2 |
+| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  23.2 |
+| COMPLETED Implement formatter helpers implementation using stitch and wale  |         |       | 5:00 |  12.1 |
+| COMPLETED Merge stitch templates with formatters                            |         |       | 3:14 |   7.8 |
+| COMPLETED Fix borked build due to seam errors                               |         |       | 0:12 |   0.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -396,6 +397,13 @@ templates one by one to use stitch and wale
 
 As a first step of the wale/stitch transition, we need to merge the
 stitch template with the formatter.
+
+*** COMPLETED Fix borked build due to seam errors                     :story:
+    CLOSED: [2016-11-03 Thu 09:22]
+    CLOCK: [2016-11-03 Thu 09:10]--[2016-11-03 Thu 09:22] =>  0:12
+
+When we changed the stitch postfix we borked the seam tests. We didn't
+notice it locally due to the usual caching of test data.
 
 *** Merge properties factory with stitching factory                   :story:
 
