quilt.cpp: tidy-up problems caused by the stitch refactor

--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,30 +14,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-03 Thu 09:22]
+#+CAPTION: Clock summary at [2016-11-03 Thu 09:45]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *41:13* |       |      | 100.0 |
+| *Total time*                                                                | *41:35* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 41:13   |       |      | 100.0 |
-| Active                                                                      |         | 41:13 |      | 100.0 |
+| Stories                                                                     | 41:35   |       |      | 100.0 |
+| Active                                                                      |         | 41:35 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   3.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   0.9 |
 | COMPLETED Improve bintray support                                           |         |       | 2:26 |   5.9 |
 | COMPLETED Add logo with white background                                    |         |       | 0:14 |   0.6 |
 | COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   1.5 |
 | COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   1.5 |
-| COMPLETED Implement wale                                                    |         |       | 7:00 |  17.0 |
+| COMPLETED Implement wale                                                    |         |       | 7:00 |  16.8 |
 | COMPLETED Add artefact source properties support                            |         |       | 3:11 |   7.7 |
 | COMPLETED Stitch not writing when template has changed                      |         |       | 0:33 |   1.3 |
-| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   6.5 |
+| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   6.4 |
 | COMPLETED Implement formatter headers using wale                            |         |       | 0:30 |   1.2 |
-| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |   9.2 |
-| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  23.2 |
-| COMPLETED Implement formatter helpers implementation using stitch and wale  |         |       | 5:00 |  12.1 |
+| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |   9.1 |
+| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  23.0 |
+| COMPLETED Implement formatter helpers implementation using stitch and wale  |         |       | 5:00 |  12.0 |
 | COMPLETED Merge stitch templates with formatters                            |         |       | 3:14 |   7.8 |
 | COMPLETED Fix borked build due to seam errors                               |         |       | 0:12 |   0.5 |
+| COMPLETED Various fixes due to stitch changes                               |         |       | 0:22 |   0.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -404,6 +405,15 @@ stitch template with the formatter.
 
 When we changed the stitch postfix we borked the seam tests. We didn't
 notice it locally due to the usual caching of test data.
+
+*** COMPLETED Various fixes due to stitch changes                     :story:
+    CLOSED: [2016-11-03 Thu 09:45]
+    CLOCK: [2016-11-03 Thu 09:23]--[2016-11-03 Thu 09:45] =>  0:22
+
+- we are deleting all helpers. This is because of the helper formatter
+  configuration.
+- fix issues with inserter helper: we skipped the inserter helper as
+  part of the clean up on stitch. However, it is borked now.
 
 *** Merge properties factory with stitching factory                   :story:
 
