--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,31 +14,32 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-03 Thu 09:45]
+#+CAPTION: Clock summary at [2016-11-03 Thu 10:37]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *41:35* |       |      | 100.0 |
+| *Total time*                                                                | *42:11* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 41:35   |       |      | 100.0 |
-| Active                                                                      |         | 41:35 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   3.0 |
+| Stories                                                                     | 42:11   |       |      | 100.0 |
+| Active                                                                      |         | 42:11 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   2.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   0.9 |
-| COMPLETED Improve bintray support                                           |         |       | 2:26 |   5.9 |
+| COMPLETED Improve bintray support                                           |         |       | 2:26 |   5.8 |
 | COMPLETED Add logo with white background                                    |         |       | 0:14 |   0.6 |
 | COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   1.5 |
 | COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   1.5 |
-| COMPLETED Implement wale                                                    |         |       | 7:00 |  16.8 |
-| COMPLETED Add artefact source properties support                            |         |       | 3:11 |   7.7 |
+| COMPLETED Implement wale                                                    |         |       | 7:00 |  16.6 |
+| COMPLETED Add artefact source properties support                            |         |       | 3:11 |   7.5 |
 | COMPLETED Stitch not writing when template has changed                      |         |       | 0:33 |   1.3 |
-| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   6.4 |
+| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   6.3 |
 | COMPLETED Implement formatter headers using wale                            |         |       | 0:30 |   1.2 |
-| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |   9.1 |
-| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  23.0 |
-| COMPLETED Implement formatter helpers implementation using stitch and wale  |         |       | 5:00 |  12.0 |
-| COMPLETED Merge stitch templates with formatters                            |         |       | 3:14 |   7.8 |
+| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |   9.0 |
+| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  22.7 |
+| COMPLETED Implement formatter helpers implementation using stitch and wale  |         |       | 5:00 |  11.9 |
+| COMPLETED Merge stitch templates with formatters                            |         |       | 3:14 |   7.7 |
 | COMPLETED Fix borked build due to seam errors                               |         |       | 0:12 |   0.5 |
 | COMPLETED Various fixes due to stitch changes                               |         |       | 0:22 |   0.9 |
+| STARTED Implement formatter implementation using stitch and wale            |         |       | 0:36 |   1.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -414,6 +415,21 @@ notice it locally due to the usual caching of test data.
   configuration.
 - fix issues with inserter helper: we skipped the inserter helper as
   part of the clean up on stitch. However, it is borked now.
+
+*** STARTED Implement formatter implementation using stitch and wale  :story:
+    CLOCK: [2016-11-03 Thu 10:01]--[2016-11-03 Thu 10:37] =>  0:36
+
+Now the templates have been merged we can start to look into using
+wale.
+
+*** Move stitching into knit                                          :story:
+
+Once all templates have been updated with wale, we need to:
+
+- setup the profiles with the correct input;
+- move wale template name into profile;
+- remove kvps from templates;
+- remove stitch target.
 
 *** Merge properties factory with stitching factory                   :story:
 
